--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </header>
     <main>
       <section>
-        <div class="title">
+        <div class="top">
           <div class="panel">
             <button id="startBtn" onclick="startGame()">START GAME</button>
           </div>
           <div id="questions">Welcome Please click "Start Game" to play.</div>
-          <div id="time">
+          <div id="timeBox">
             TIME LEFT
             <div id="timer"></div>
           </div>
