--- a/index.html
+++ b/index.html
@@ -14,66 +14,61 @@
     <link rel="stylesheet" href="styles/css/main.css" />
   </head>
   <body>
-    <header></header>
-
-    <section>
-      <div class="top">
-        <button id="startBtn" onclick="startGame()">START GAME</button>
-        <div class="display">
-          <div id="questions">Welcome click "Start Game" to play.</div>
-          <ul class="options">
-            <li id="a">A:</li>
-            <li id="b">B:</li>
-            <li id="c">C:</li>
-            <li id="d">D:</li>
-          </ul>
-        </div>
-        <div id="timeBox">
-          TIME LEFT
-          <div id="timer"></div>
-        </div>
-      </div>
-      <div class="bottom">
-        <ul>
-          <button
-            input
-            type="button"
-            id="buttonA"
-            class="keys"
-            onclick="checkAnswer(this.id)"
-          >
-            A
-          </button>
-          <button
-            input
-            type="button"
-            id="buttonB"
-            class="keys"
-            onclick="checkAnswer(this.id)"
-          >
-            B
-          </button>
-          <button
-            input
-            type="button"
-            id="buttonC"
-            class="keys"
-            onclick="checkAnswer(this.id)"
-          >
-            C
-          </button>
-          <button
-            input
-            type="button"
-            id="buttonD"
-            class="keys"
-            onclick="checkAnswer(this.id)"
-          >
-            D
-          </button>
+    <main>
+      <button id="startBtn" onclick="startGame()">START GAME</button>
+      <div class="display">
+        <div id="questions">Welcome click "Start Game" to play.</div>
+        <ul class="options">
+          <li id="a">A:</li>
+          <li id="b">B:</li>
+          <li id="c">C:</li>
+          <li id="d">D:</li>
         </ul>
       </div>
-    </section>
+      <div id="timeBox">
+        TIME LEFT
+        <div id="timer"></div>
+      </div>
+
+      <ul class="answerBtn">
+        <button
+          input
+          type="button"
+          id="buttonA"
+          class="keys"
+          onclick="checkAnswer(this.id)"
+        >
+          A
+        </button>
+        <button
+          input
+          type="button"
+          id="buttonB"
+          class="keys"
+          onclick="checkAnswer(this.id)"
+        >
+          B
+        </button>
+        <button
+          input
+          type="button"
+          id="buttonC"
+          class="keys"
+          onclick="checkAnswer(this.id)"
+        >
+          C
+        </button>
+        <button
+          input
+          type="button"
+          id="buttonD"
+          class="keys"
+          onclick="checkAnswer(this.id)"
+        >
+          D
+        </button>
+      </ul>
+    </main>
 
     <footer>
       <time>&copy <span>Maurice Moss </span>2010</time>
